# ai-app-lab

./: .gitignore  README.md
arkitect/core/component/tool/: builder.py  mcp_client.py  utils.py
demohouse/deep_research/: deep_research.py  deep_research_double.py  eval.py  prompt.py
demohouse/deep_search/: deep_research.py  prompt.py
demohouse/oncaller/backend/: main.py  pyproject.toml  requirement.txt  test.py
demohouse/oncaller/backend/agent/: agent.py  supervisor.py  worker.py
demohouse/oncaller/backend/models/: planning.py  tool_events.py
demohouse/oncaller/backend/planning/: planner.py
demohouse/oncaller/backend/prompt/: prompt.py  worker.py
demohouse/oncaller/backend/supervisor/: supervisor.py
demohouse/oncaller/backend/team/: team.py
tests/ut/core/component/tool/: test_mcp_client.py
