[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "liuminghao", email = "liuminghao.lm@bytedance.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "arkitect @ file:///${PROJECT_ROOT}/../../..",
    "mcp<2.0.0,>=1.4.1",
    "bytedtrace==0.4.0",
]
name = "oncaller"
version = "0.1.0"
description = "oncaller using agent system"
